fix calc scrollVisible

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -11,7 +11,7 @@ $checkBoxWidth: 18px;
   right: 0;
   bottom: 0;
 
-  md-list-item.md-button-wrap > div.md-button:first-child{
+  md-list-item.md-button-wrap > div.md-button:first-child {
     padding: 0;
   }
   .row-header {
@@ -64,7 +64,6 @@ $checkBoxWidth: 18px;
     &:focus {
       outline: none;
     }
-
 
   }
   .th {
@@ -361,8 +360,13 @@ $checkBoxWidth: 18px;
 
 .mdtTable {
   .td:last-child,
-  .th:last-child {
+  .th-last {
     padding-right: 16px;
+  }
+
+  .th-scroll {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
